# evie

./: Cargo.toml  README.md  justfile
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  engine.rs  lib.rs  trigger.rs
crates/core/src/buffer/: test.rs
crates/ui/: Cargo.toml
crates/ui/src/: editor.rs  lib.rs  renderer.rs  trigger.rs
crates/ui/src/editor/: internal.rs
src/: main.rs
