[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[package]
name = "evie"
version = "0.0.1"
edition = "2021"

[dependencies]
evie-ui = { path = "crates/ui" }

[workspace.dependencies]
ropey = "1.6"
tokio = { version = "1.43", features = ["full"] }
